# beryl

./: .gitignore  Cargo.toml  README.md  justfile
src/: app.rs  backend.rs  clickhouse.rs  dataframe.rs  db_config.rs  error.rs  format.rs  main.rs  middleware.rs  query.rs  query_ir.rs  schema.rs
src/clickhouse/: df.rs  sql.rs
src/handlers/: api.rs  api_shared.rs  api_single.rs  index.rs  metadata.rs  mod.rs  util.rs
src/query_ir/: filter_ir.rs
src/schema/: mod.rs  schema_config.rs
test/: justfile  schema.json  test-beryl-insert.sql  test-beryl.sql
