[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"
name = "beryl"
version = "0.1.0"

[dependencies]
actix = "0.7.7"
actix-web = "0.7.19"
clickhouse-rs = "0.1.20"
csv = "1.0.7"
failure = "0.1.5"
futures = "0.1.26"
itertools = "0.8.0"
lazy_static = "1.3.0"
log = "0.4.6"
mime = "0.3.13"
pretty_env_logger = "0.3.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
serde_qs = "0.4.5"
structopt = "0.2.15"
tera = "0.11.20"

[dependencies.indexmap]
features = ["serde-1"]
version = "1.0.2"
